# dsu-updater

./: CMakeLists.txt  init_source.sh  main.cpp  readme.md
.github/workflows/: build.yml
patch/system-core/: Include_files_to_fix_building_and_fix_GetPartitionAbsolutePath.patch
patch/system-libbase/: modify_to_build.patch
patch/system-logging/: do_not_include_android_filesystem_config_h.patch
